<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E1BEE7"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/cost_of_service"
        android:layout_width="210dp"
        android:layout_height="58dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:hint="@string/cost_of_service"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#202155"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/service_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cost_of_service"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/how_was_the_service"
        android:textColor="#333333"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        />

    <RadioGroup
        android:id="@+id/tip_options"
        android:orientation="vertical"
        android:checkedButton="@id/option_seven_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/service_question"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        >

        <RadioButton
            android:id="@+id/option_ten_percent"
            android:text="@string/perfect_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/option_seven_percent"
            android:text="@string/good_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/option_five_percent"
            android:text="@string/normal_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RadioGroup>

    <TextView
        android:id="@+id/round_tip_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/round_the_tip"
        app:layout_constraintTop_toBottomOf="@id/tip_options"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:textColor="#333333"
        android:textSize="18sp"
        />

    <Switch
        android:id="@+id/round_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@id/round_tip_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TextSizeCheck,UseSwitchCompatOrMaterialXml"
        android:layout_marginTop="8dp"
        />

    <Button
        android:id="@+id/calculate_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#2196F3"
        android:text="@string/calculate"
        android:textColor="#212121"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/round_tip" />

    <TextView
        android:id="@+id/tip_results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tip_amount"
        android:textColor="#3949AB"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculate_button" />

</androidx.constraintlayout.widget.ConstraintLayout>
